Fix push notification API issue and fixed extra space issue near sidebox launcher (#2733)
* Updated access for admin for webhooks section

Also removed unused code from billing section

* Updated position of Available in growth plan text in push notification section.

* Fix layout of buttons coming in bot welcome message

* Fix push notification API issue and fixed extra space issue near sidebox launcher

--- a/css/app/mck-sidebox-1.0.css
+++ b/css/app/mck-sidebox-1.0.css
@@ -4469,7 +4469,7 @@ color: rgba(0,0,0,0.5);
 .km-cta-multi-button-container {
     display: flex;
     flex-flow: row;
-	justify-content: center;
+	justify-content: flex-start;
 	flex-wrap: wrap;
 
 }
